# xmake-project-manager

./: CMakeLists.txt  README.md  XMakeProjectManager.json.in
.github/workflows/: build_cmake.yml
src/: XMakeProjectConstant.hpp  XMakeProjectPlugin.cpp
src/exewrappers/: XMakeTools.cpp  XMakeTools.hpp  XMakeWrapper.cpp  XMakeWrapper.hpp  XMakeWrapper.inl
src/project/: XMakeBuildConfiguration.cpp  XMakeBuildConfiguration.hpp  XMakeBuildStep.cpp  XMakeBuildStep.hpp  XMakeBuildSystem.cpp  XMakeProcess.cpp  XMakeProcess.hpp  XMakeProject.cpp  XMakeProjectParser.cpp  XMakeRunConfiguration.cpp  XMakeRunConfiguration.hpp
src/project/buildoptions/: XMakeBuildSettingsWidget.cpp
src/project/projecttree/: ProjectTree.cpp
src/settings/general/: Settings.cpp
src/settings/tools/: ToolsItemSettings.cpp  ToolsSettingsAccessor.cpp
src/settings/tools/kitaspect/: XMakeToolKitAspect.cpp  XMakeToolKitAspect.hpp
